[package]
name = "wrpl"
version = "0.9.0"
edition = "2021"
default-run = "parse_replay"
# FIXME: add other authors, I just cobbled shit I found into this package
authors = ["llama-for3ver <llamaz@rooik.at>"]
license = "GPL-3.0"
repository = "https://github.com/llama-for3ver/wrpl"
description = "A library/CLI to decode War Thunder replays (.wrpl)."
exclude = ["replays/**", "tests/**"]
keywords = ["parsing", "encoding", "command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
env_logger = "0.11.8"
flate2 = "1.1.1"
log = "0.4.27"
memchr = "2.7.4"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.15"
wt_blk = "0.2.1"
